--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,10 @@ base64 = "0.21.2"
 log = "0.4.20"
 log2 = "0.1.7"
 futures="0.3.28"
-inquire = "0.6.2"
-indicatif = "0.17.6"
-crossterm = "0.27.0"
+
+[profile.release]
+opt-level = 'z'     # Optimize for size
+lto = true          # Enable link-time optimization
+codegen-units = 1   # Reduce number of codegen units to increase optimizations
+panic = 'abort'     # Abort on panic
+strip = true        # Strip symbols from binary*
