--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,8 @@ regex = "1.9.3"
 base64 = "0.21.2"
 log = "0.4.20"
 log2 = "0.1.7"
-futures="0.3.28"
+futures ="0.3.28"
+crossterm = "0.27.0"
 
 [profile.release]
 opt-level = 'z'     # Optimize for size
