--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ scraper = "0.17.1"
 regex = "1.9.3"
 base64 = "0.21.2"
 log = "0.4.20"
-log2 = "0.1.7"
+env_logger = "0.10.0"
 futures ="0.3.28"
 crossterm = "0.27.0"
 
